Added home page

--- a/things/templates/home.html
+++ b/things/templates/home.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
 <html>
-    <head>
-        <title>Things</title>
-    </head>
+    <title>
+        Things
+    </title>>
+
     <body>
-        <h1>Things</h1>
+        <h1>Things</h1>	
     </body>
+
 </html>
